--- a/apps/store/tsconfig.app.json
+++ b/apps/store/tsconfig.app.json
@@ -6,6 +6,9 @@
     "target": "ES2017"
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.d.ts"],
+  "include": [
+    "src/**/*.d.ts",
+    "../../libs/store/feature-game-detail/src/index.ts"
+  ],
   "exclude": ["**/*.test.ts", "**/*.spec.ts"]
 }
