--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@bg-hoard/store/feature-game-detail": [
+        "libs/store/feature-game-detail/src/index.ts"
+      ],
       "@bg-hoard/store/ui-shared": ["libs/store/ui-shared/src/index.ts"],
       "@bg-hoard/store/uitil-formatters": [
         "libs/store/uitil-formatters/src/index.ts"
