--- a/libs/util-interface/project.json
+++ b/libs/util-interface/project.json
@@ -1,14 +1,14 @@
 {
   "projectType": "library",
-  "root": "libs/api/util-interface",
-  "sourceRoot": "libs/api/util-interface/src",
+  "root": "libs/util-interface",
+  "sourceRoot": "libs/util-interface/src",
   "prefix": "bg-hoard",
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/api/util-interface"],
+      "outputs": ["coverage/libs/util-interface"],
       "options": {
-        "jestConfig": "libs/api/util-interface/jest.config.js",
+        "jestConfig": "libs/util-interface/jest.config.js",
         "passWithNoTests": true
       }
     },
@@ -16,8 +16,8 @@
       "executor": "@nrwl/linter:eslint",
       "options": {
         "lintFilePatterns": [
-          "libs/api/util-interface/src/**/*.ts",
-          "libs/api/util-interface/src/**/*.html"
+          "libs/util-interface/src/**/*.ts",
+          "libs/util-interface/src/**/*.html"
         ]
       }
     }
