chore: 🤖 (lab15) run only affected projects

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
       - run: npm run nx test store # test the "store" project
   test-api:
     runs-on: ubuntu-latest
-    name: Test API
+    name: Testing affected apps
     steps:
       - uses: actions/checkout@v1
-      - uses: bahmutov/npm-install@v1
-      - run: npm run nx test api
+      - uses: bahmutov/npm-install@v1.4.5
+      - run: npm run nx affected
